fixed width of text on details page on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -578,7 +578,10 @@ p > a {
   }
   
   .details-description {
+    width: 300px;
     margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
     line-height: 21px;
     font-size: 15px;
     letter-spacing: .1rem;
@@ -587,10 +590,16 @@ p > a {
   ul {
     margin-top: 30px;
     margin-left: 16px;
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   ul > li {
     line-height: 24px;
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   ol {
@@ -598,6 +607,9 @@ p > a {
     margin-left: 16px;
     margin-bottom: 90px;
     line-height: 24px;
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .footer {
